--- a/GraduationProject/GraduationProject.vcxproj.filters
+++ b/GraduationProject/GraduationProject.vcxproj.filters
@@ -13,270 +13,300 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="system">
+      <UniqueIdentifier>{9a3ad76a-59bc-48dc-bf6c-0de7add5f312}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="object">
+      <UniqueIdentifier>{5cd1c635-8424-440d-a0d1-e02815edde5a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="object\2D">
+      <UniqueIdentifier>{79b2a6e8-f507-488b-bd3f-009c98d0465a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="object\3D">
+      <UniqueIdentifier>{c91be72d-3973-4cdf-8d25-0874cf4dd5da}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="object\X">
+      <UniqueIdentifier>{74fa6cf1-bb95-4cbe-b8eb-95478671063d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="object\character">
+      <UniqueIdentifier>{57d4c2a7-803d-4088-b8d9-95d934f53497}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="object\character\player">
+      <UniqueIdentifier>{f9a389ef-0e0d-40c4-b489-717a8ee0c66e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="object\3D\field">
+      <UniqueIdentifier>{67f93f2a-9de3-4f89-9b4f-167247543e2f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="camera">
+      <UniqueIdentifier>{b8b10f3f-e33b-406a-9731-ef33980b9805}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="scene">
+      <UniqueIdentifier>{d6ffae13-065d-4b60-aaf7-d342d4baa3eb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\billboard.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\camera.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\camera_state.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\character.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\colision.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\fade.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\field.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\game.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\game_camera.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\game_field.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\game_manager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\game_player.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\game_player_state.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\game_state.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\input.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\light.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\main.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\manager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\model.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\model_parts.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\number.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\object.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\object2D.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\object2D_anim.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\object3D.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\object3D_anim.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\objectX.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\particle.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\player.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\useful.cpp">
+      <Filter>system</Filter>
     </ClCompile>
     <ClCompile Include="src\precompile.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>system</Filter>
     </ClCompile>
     <ClCompile Include="src\renderer.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>system</Filter>
     </ClCompile>
-    <ClCompile Include="src\result.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\input.cpp">
+      <Filter>system</Filter>
     </ClCompile>
-    <ClCompile Include="src\result_camera.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\light.cpp">
+      <Filter>system</Filter>
     </ClCompile>
-    <ClCompile Include="src\result_player.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\main.cpp">
+      <Filter>system</Filter>
     </ClCompile>
-    <ClCompile Include="src\result_screen.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\manager.cpp">
+      <Filter>system</Filter>
     </ClCompile>
-    <ClCompile Include="src\result_ui.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\scene.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="src\shadow.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\colision.cpp">
+      <Filter>system</Filter>
     </ClCompile>
     <ClCompile Include="src\texture.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>system</Filter>
     </ClCompile>
-    <ClCompile Include="src\title.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\model.cpp">
+      <Filter>system</Filter>
     </ClCompile>
-    <ClCompile Include="src\title_camera.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\billboard.cpp">
+      <Filter>object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\shadow.cpp">
+      <Filter>object\3D</Filter>
     </ClCompile>
     <ClCompile Include="src\title_screen.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>object\2D</Filter>
     </ClCompile>
-    <ClCompile Include="src\useful.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="src\result_screen.cpp">
+      <Filter>object\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\object2D.cpp">
+      <Filter>object\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\object2D_anim.cpp">
+      <Filter>object\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\fade.cpp">
+      <Filter>object\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\object3D_anim.cpp">
+      <Filter>object\3D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\object3D.cpp">
+      <Filter>object\3D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\result_ui.cpp">
+      <Filter>object\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\model_parts.cpp">
+      <Filter>object\X</Filter>
+    </ClCompile>
+    <ClCompile Include="src\objectX.cpp">
+      <Filter>object\X</Filter>
+    </ClCompile>
+    <ClCompile Include="src\character.cpp">
+      <Filter>object\character</Filter>
+    </ClCompile>
+    <ClCompile Include="src\player.cpp">
+      <Filter>object\character\player</Filter>
+    </ClCompile>
+    <ClCompile Include="src\field.cpp">
+      <Filter>object\3D\field</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game_field.cpp">
+      <Filter>object\3D\field</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game_player.cpp">
+      <Filter>object\character\player</Filter>
+    </ClCompile>
+    <ClCompile Include="src\result_player.cpp">
+      <Filter>object\character\player</Filter>
+    </ClCompile>
+    <ClCompile Include="src\object.cpp">
+      <Filter>object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\camera.cpp">
+      <Filter>camera</Filter>
+    </ClCompile>
+    <ClCompile Include="src\camera_state.cpp">
+      <Filter>camera</Filter>
+    </ClCompile>
+    <ClCompile Include="src\result_camera.cpp">
+      <Filter>camera</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game_camera.cpp">
+      <Filter>camera</Filter>
+    </ClCompile>
+    <ClCompile Include="src\title_camera.cpp">
+      <Filter>camera</Filter>
+    </ClCompile>
+    <ClCompile Include="src\title.cpp">
+      <Filter>scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene.cpp">
+      <Filter>scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game.cpp">
+      <Filter>scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\result.cpp">
+      <Filter>scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game_manager.cpp">
+      <Filter>scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game_state.cpp">
+      <Filter>scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game_player_state.cpp">
+      <Filter>object\character\player</Filter>
+    </ClCompile>
+    <ClCompile Include="src\number.cpp">
+      <Filter>object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\particle.cpp">
+      <Filter>object</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\billboard.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\camera.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\camera_state.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\character.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\colision.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\fade.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\field.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\game.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\game_camera.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\game_field.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\game_manager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\game_player.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\game_player_state.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\game_state.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\input.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\light.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\main.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\manager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\model.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\model_parts.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\number.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\object.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\object2D.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\object2D_anim.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\object3D.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\object3D_anim.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\objectX.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\particle.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\player.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\precompile.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="src\useful.h">
+      <Filter>system</Filter>
     </ClInclude>
     <ClInclude Include="src\renderer.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>system</Filter>
     </ClInclude>
-    <ClInclude Include="src\result.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="src\precompile.h">
+      <Filter>system</Filter>
     </ClInclude>
-    <ClInclude Include="src\result_camera.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="src\manager.h">
+      <Filter>system</Filter>
     </ClInclude>
-    <ClInclude Include="src\result_player.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="src\light.h">
+      <Filter>system</Filter>
     </ClInclude>
-    <ClInclude Include="src\result_screen.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="src\main.h">
+      <Filter>system</Filter>
     </ClInclude>
-    <ClInclude Include="src\result_ui.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\scene.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\shadow.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\texture.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\title.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\title_camera.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\title_screen.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="src\useful.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="src\input.h">
+      <Filter>system</Filter>
     </ClInclude>
     <ClInclude Include="src\count.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>system</Filter>
+    </ClInclude>
+    <ClInclude Include="src\colision.h">
+      <Filter>system</Filter>
+    </ClInclude>
+    <ClInclude Include="src\texture.h">
+      <Filter>system</Filter>
+    </ClInclude>
+    <ClInclude Include="src\model.h">
+      <Filter>system</Filter>
+    </ClInclude>
+    <ClInclude Include="src\billboard.h">
+      <Filter>object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\shadow.h">
+      <Filter>object\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\title_screen.h">
+      <Filter>object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\result_screen.h">
+      <Filter>object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\object2D.h">
+      <Filter>object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\object2D_anim.h">
+      <Filter>object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fade.h">
+      <Filter>object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\object3D_anim.h">
+      <Filter>object\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\object3D.h">
+      <Filter>object\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\result_ui.h">
+      <Filter>object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\model_parts.h">
+      <Filter>object\X</Filter>
+    </ClInclude>
+    <ClInclude Include="src\objectX.h">
+      <Filter>object\X</Filter>
+    </ClInclude>
+    <ClInclude Include="src\character.h">
+      <Filter>object\character</Filter>
+    </ClInclude>
+    <ClInclude Include="src\player.h">
+      <Filter>object\character\player</Filter>
+    </ClInclude>
+    <ClInclude Include="src\field.h">
+      <Filter>object\3D\field</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game_field.h">
+      <Filter>object\3D\field</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game_player.h">
+      <Filter>object\character\player</Filter>
+    </ClInclude>
+    <ClInclude Include="src\result_player.h">
+      <Filter>object\character\player</Filter>
+    </ClInclude>
+    <ClInclude Include="src\object.h">
+      <Filter>object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\title_camera.h">
+      <Filter>camera</Filter>
+    </ClInclude>
+    <ClInclude Include="src\result_camera.h">
+      <Filter>camera</Filter>
+    </ClInclude>
+    <ClInclude Include="src\camera.h">
+      <Filter>camera</Filter>
+    </ClInclude>
+    <ClInclude Include="src\camera_state.h">
+      <Filter>camera</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game_camera.h">
+      <Filter>camera</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene.h">
+      <Filter>scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\title.h">
+      <Filter>scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\result.h">
+      <Filter>scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game.h">
+      <Filter>scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game_manager.h">
+      <Filter>scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game_state.h">
+      <Filter>scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game_player_state.h">
+      <Filter>object\character\player</Filter>
+    </ClInclude>
+    <ClInclude Include="src\number.h">
+      <Filter>object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\particle.h">
+      <Filter>object</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
