無視リスト更新

--- a/.gitignore
+++ b/.gitignore
@@ -416,4 +416,6 @@ FodyWeavers.xsd
 *.msix
 *.msm
 *.msp
-/GraduationProject/GraduationProject.vcxproj.filters
+
+# Visual Studio project filters
+*.vcxproj.filters
