--- a/GraduationProject/GraduationProject.vcxproj.filters
+++ b/GraduationProject/GraduationProject.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="scene\game">
       <UniqueIdentifier>{6963246c-f6b9-40f8-98d7-18ddefe4a2bb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="object\2D\UI">
+      <UniqueIdentifier>{9051d7a5-456e-4285-8d69-26c42260338d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\useful.cpp">
@@ -104,9 +107,6 @@
     </ClCompile>
     <ClCompile Include="src\object3D.cpp">
       <Filter>object\3D</Filter>
-    </ClCompile>
-    <ClCompile Include="src\result_ui.cpp">
-      <Filter>object\2D</Filter>
     </ClCompile>
     <ClCompile Include="src\model_parts.cpp">
       <Filter>object\X</Filter>
@@ -186,14 +186,20 @@
     <ClCompile Include="src\card.cpp">
       <Filter>object</Filter>
     </ClCompile>
-    <ClCompile Include="src\life_UI.cpp">
-      <Filter>object\2D</Filter>
-    </ClCompile>
     <ClCompile Include="src\card_state.cpp">
       <Filter>object</Filter>
     </ClCompile>
     <ClCompile Include="src\hand.cpp">
       <Filter>object</Filter>
+    </ClCompile>
+    <ClCompile Include="src\life_UI.cpp">
+      <Filter>object\2D\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\result_ui.cpp">
+      <Filter>object\2D\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="src\energy_UI.cpp">
+      <Filter>object\2D\UI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -256,9 +262,6 @@
     </ClInclude>
     <ClInclude Include="src\object3D.h">
       <Filter>object\3D</Filter>
-    </ClInclude>
-    <ClInclude Include="src\result_ui.h">
-      <Filter>object\2D</Filter>
     </ClInclude>
     <ClInclude Include="src\model_parts.h">
       <Filter>object\X</Filter>
@@ -338,14 +341,20 @@
     <ClInclude Include="src\card.h">
       <Filter>object</Filter>
     </ClInclude>
-    <ClInclude Include="src\life_UI.h">
-      <Filter>object\2D</Filter>
-    </ClInclude>
     <ClInclude Include="src\card_state.h">
       <Filter>object</Filter>
     </ClInclude>
     <ClInclude Include="src\hand.h">
       <Filter>object</Filter>
+    </ClInclude>
+    <ClInclude Include="src\life_UI.h">
+      <Filter>object\2D\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\result_ui.h">
+      <Filter>object\2D\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\energy_UI.h">
+      <Filter>object\2D\UI</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
