--- a/GraduationProject/GraduationProject.vcxproj
+++ b/GraduationProject/GraduationProject.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\area.cpp" />
     <ClCompile Include="src\billboard.cpp" />
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\camera_state.cpp" />
@@ -189,6 +190,7 @@
     <ClCompile Include="src\object3D.cpp" />
     <ClCompile Include="src\object3D_anim.cpp" />
     <ClCompile Include="src\objectX.cpp" />
+    <ClCompile Include="src\object2D_triangle.cpp" />
     <ClCompile Include="src\particle.cpp" />
     <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\precompile.cpp">
@@ -210,6 +212,7 @@
     <ClCompile Include="src\useful.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\area.h" />
     <ClInclude Include="src\billboard.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\camera_state.h" />
@@ -245,6 +248,7 @@
     <ClInclude Include="src\object3D.h" />
     <ClInclude Include="src\object3D_anim.h" />
     <ClInclude Include="src\objectX.h" />
+    <ClInclude Include="src\object2D_triangle.h" />
     <ClInclude Include="src\particle.h" />
     <ClInclude Include="src\player.h" />
     <ClInclude Include="src\precompile.h" />
