--- a/GraduationProject/GraduationProject.vcxproj.filters
+++ b/GraduationProject/GraduationProject.vcxproj.filters
@@ -201,6 +201,12 @@
     <ClCompile Include="src\energy_UI.cpp">
       <Filter>object\2D\UI</Filter>
     </ClCompile>
+    <ClCompile Include="src\object2D_triangle.cpp">
+      <Filter>object\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="src\area.cpp">
+      <Filter>object\2D</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\useful.h">
@@ -355,6 +361,12 @@
     </ClInclude>
     <ClInclude Include="src\energy_UI.h">
       <Filter>object\2D\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\object2D_triangle.h">
+      <Filter>object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="src\area.h">
+      <Filter>object\2D</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
