--- a/GraduationProject/GraduationProject.vcxproj
+++ b/GraduationProject/GraduationProject.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\active_scene_character.cpp" />
     <ClCompile Include="src\area.cpp" />
     <ClCompile Include="src\billboard.cpp" />
     <ClCompile Include="src\camera.cpp" />
@@ -171,7 +172,7 @@
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\game_camera.cpp" />
     <ClCompile Include="src\game_field.cpp" />
-    <ClCompile Include="src\game_manager.cpp" />
+    <ClCompile Include="src\active_manager.cpp" />
     <ClCompile Include="src\game_player.cpp" />
     <ClCompile Include="src\game_player_state.cpp" />
     <ClCompile Include="src\game_state.cpp" />
@@ -212,6 +213,7 @@
     <ClCompile Include="src\useful.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\active_scene_character.h" />
     <ClInclude Include="src\area.h" />
     <ClInclude Include="src\billboard.h" />
     <ClInclude Include="src\camera.h" />
@@ -229,7 +231,7 @@
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\game_camera.h" />
     <ClInclude Include="src\game_field.h" />
-    <ClInclude Include="src\game_manager.h" />
+    <ClInclude Include="src\active_manager.h" />
     <ClInclude Include="src\game_player.h" />
     <ClInclude Include="src\game_player_state.h" />
     <ClInclude Include="src\game_state.h" />
