真ん中のエリア追加

--- a/GraduationProject/GraduationProject.vcxproj
+++ b/GraduationProject/GraduationProject.vcxproj
@@ -157,11 +157,13 @@
   <ItemGroup>
     <ClCompile Include="src\active_scene_character.cpp" />
     <ClCompile Include="src\area.cpp" />
+    <ClCompile Include="src\area_manager.cpp" />
     <ClCompile Include="src\billboard.cpp" />
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\camera_state.cpp" />
     <ClCompile Include="src\card.cpp" />
     <ClCompile Include="src\card_state.cpp" />
+    <ClCompile Include="src\center_area.cpp" />
     <ClCompile Include="src\character.cpp" />
     <ClCompile Include="src\colision.cpp" />
     <ClCompile Include="src\enemy.cpp" />
@@ -220,11 +222,13 @@
     <ClInclude Include="src\active_scene_character.h" />
     <ClInclude Include="src\active_scene_character_state.h" />
     <ClInclude Include="src\area.h" />
+    <ClInclude Include="src\area_manager.h" />
     <ClInclude Include="src\billboard.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\camera_state.h" />
     <ClInclude Include="src\card.h" />
     <ClInclude Include="src\card_state.h" />
+    <ClInclude Include="src\center_area.h" />
     <ClInclude Include="src\character.h" />
     <ClInclude Include="src\colision.h" />
     <ClInclude Include="src\count.h" />
