--- a/Effekseer/Effekseer.vcxproj
+++ b/Effekseer/Effekseer.vcxproj
@@ -94,7 +94,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\student\Documents\Visual Studio 2019\Project\DirectX\2025\Effekseer\thirdparty\EffekseerForDXLib</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>thirdparty\EffekseerForDXLib</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <LanguageStandard>stdcpp14</LanguageStandard>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -104,7 +104,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\student\Documents\Visual Studio 2019\Project\DirectX\2025\Effekseer\thirdparty\EffekseerForDXLib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>thirdparty\EffekseerForDXLib</AdditionalLibraryDirectories>
       <AdditionalOptions>/FI"pch.h" %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
@@ -116,7 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\student\Documents\Visual Studio 2019\Project\DirectX\2025\Effekseer\thirdparty\EffekseerForDXLib</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>thirdparty\EffekseerForDXLib</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -128,7 +128,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\student\Documents\Visual Studio 2019\Project\DirectX\2025\Effekseer\thirdparty\EffekseerForDXLib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>thirdparty\EffekseerForDXLib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
